[tool.poetry]
name = "submask-cipher"
version = "1.0.0"
description = "Substitution Masking Cipher"
authors = ["Amaan <71920621+amaank404@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    {include = "submask_cipher.py"}
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
